# MyOpencvCamera

./: .gitignore  README.md  build.gradle  import-summary.txt  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_back_camera.xml  activity_camer3_study_activty.xml  activity_camera.xml  activity_camera_x.xml  activity_custom_camera.xml  activity_custom_camera_dlib.xml  activity_custom_camera_dlib2.xml  activity_data_gallery.xml  activity_entry.xml  activity_front_camera.xml  activity_gpu.xml  activity_main.xml  activity_ml_test.xml  activity_record_list.xml  activity_simple_cus_camera.xml  activity_simple_cus_camera_dlib.xml  item_people.xml
app/src/main/res/values/: strings.xml
customzycamerademo/: build.gradle
customzycamerademo/src/main/: AndroidManifest.xml
customzycamerademo/src/main/res/layout/: activity_main.xml
customzycamerademo/src/main/res/values/: themes.xml
cv42sdk/: build.gradle
dlib/: build.gradle
dlib/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
jni_study/: build.gradle
jni_study/src/main/: AndroidManifest.xml
jni_study/src/main/jni/: CMakeLists.txt  LogUtils.h  StringUtils.h  native-lib.cpp
jni_study/src/main/res/layout/: activity_main.xml
jni_study/src/main/res/values/: strings.xml
motion_camera/: build.gradle
motion_camera/libs/: LibPose-release.aar  ZySportEu-release.aar
motion_camera/src/main/: AndroidManifest.xml
motion_camera/src/main/res/layout/: activity_main.xml
yuv-tool/: build.gradle
yuv_tool_demo/: build.gradle
(+149 files in other folders)
